@@ -1,0 +1,10 @@
+#include <LuceneKit/Search/LCQuery.h>
+
+@interface LCPrefixQuery: LCQuery
+{
+	LCTerm *prefix;
+}
+
+- (id) initWithTerm: (LCTerm *) prefix;
+- (LCTerm *) prefix;
+@end
